[package]
name = "zenlink-protocol"
version = "0.4.4"
authors = ["Zenlink Developers"]
edition = "2021"
license = "Apache 2.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
log = { version = "0.4.14", default-features = false }
serde = { version = "1.0.163", default-features = false, features = ["derive", "alloc"], optional = true }
# alias "parity-scale-code" to "codec"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v1.0.0" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }

# Polkadot
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false }

# Cumulus
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v1.0.0" }

orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "c00d1735efc629f6a44c024aecd0ef525069cf31", default-features = false }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "c00d1735efc629f6a44c024aecd0ef525069cf31", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }


[features]
default = ["std"]
std = [
    "log/std",
    "serde/std",
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-arithmetic/std",
    "pallet-balances/std",

    "xcm/std",
    "xcm-executor/std",
    "cumulus-primitives-core/std",

    "orml-traits/std",
    "orml-tokens/std",
    "frame-benchmarking/std",
]

runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [ "frame-support/try-runtime" ]
