[package]
name = "zenlink-protocol"
version = "0.4.4"
authors = ["Zenlink Developers"]
edition = "2021"
license = "Apache 2.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
log = { workspace = true }
serde = { workspace = true, optional = true }
# alias "parity-scale-code" to "codec"
codec = { workspace = true }
scale-info = { workspace = true }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
sp-core = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-arithmetic = { workspace = true }
pallet-balances = { workspace = true }

# Polkadot
xcm = { workspace = true }
xcm-executor = { workspace = true }

# Cumulus
cumulus-primitives-core = { workspace = true }

orml-traits = { workspace = true }
orml-tokens = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }


[features]
default = ["std"]
std = [
    "log/std",
    "serde",
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-arithmetic/std",
    "pallet-balances/std",

    "xcm/std",
    "xcm-executor/std",
    "cumulus-primitives-core/std",

    "orml-traits/std",
    "orml-tokens/std",
]

runtime-benchmarks = [
    "frame-benchmarking",
]
try-runtime = [ "frame-support/try-runtime" ]
